force-app/main/default/objects/Student__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Student email address</description>
    <inlineHelpText>Enter the student&apos;s college email address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>