force-app/main/default/objects/Student__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <description>Unique identification number of the student</description>
    <inlineHelpText>Enter the student&apos;s college ID</inlineHelpText>
    <label>Student ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>