force-app/main/default/objects/Student__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Current academic year of the student</description>
    <inlineHelpText>Select the student&apos;s current year</inlineHelpText>
    <label>Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Year</fullName>
            </value>
            <value>
                <fullName>2nd Year</fullName>
            </value>
            <value>
                <fullName>3rd Year</fullName>
            </value>
            <value>
                <fullName>4th Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>